--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,12 @@
 [mysql]
-host = localhost
-database = TwitterBox
-user = root
-password = 121
+host = placeholder
+database = placeholder
+user = placeholder
+password = placeholder
+
+[auth]
+
+api_key = placeholder
+api_secret = placeholder
+access_token = placeholder
+access_token_secret = placeholder
